--- a/test/float.html
+++ b/test/float.html
@@ -11,6 +11,17 @@
             height:100px;
             border: solid pink;
         }
+
+        @media (prefers-color-scheme: dark) {
+            body{
+                filter: invert(100%);
+                background-color: rgb(29,32,31) !important;
+            }
+            img,
+            .emoji{
+                filter: invert(100%);
+            }
+        }
     </style>
 </head>
 <body>
