--- a/前端布局方案code/水平居中/Flex方案.html
+++ b/前端布局方案code/水平居中/Flex方案.html
@@ -18,7 +18,7 @@
 
         .child {
             /* 或者 子元素 margin: auto*/
-            margin: 0;
+            /* margin: 0; */
         }
     </style>
 </head>
