--- a/test/displaynone.html
+++ b/test/displaynone.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div hidden>hidden</div>
     <div onclick="fun()" style="display:none;">dddddddddddd</div>
     <div style="margin:0;">
         位置
