--- a/单行文本垂直居中.html
+++ b/单行文本垂直居中.html
@@ -7,15 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div hidden>hidden</div>
-    <div onclick="fun()" style="display:none;width:10px;height: 10px;">dddddddddddd</div>
-    <div style="margin:0;">
-        位置
+    <div style="line-height: 30px;height: 30px;">
+        单行文本
+        
     </div>
-    <script>
-        function fun(){
-            console.log('fun');
-        }
-    </script>
 </body>
 </html>
