快手面试&例子

--- a/test/displaynone.html
+++ b/test/displaynone.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div hidden>hidden</div>
+    <div style="width:10px;height:10px;" hidden>hidden</div>
     <div onclick="fun()" style="display:none;width:10px;height: 10px;">dddddddddddd</div>
     <div style="margin:0;">
         位置
