--- a/前端布局方案code/两栏布局/2.html
+++ b/前端布局方案code/两栏布局/2.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <style>
         .left {
-            width: 100px;
+            width: 200px;
             height: 300px;
             background: red;
             float: left;
@@ -16,7 +16,7 @@
 
         .right {
             height: 300px;
-            background: blue;
+            background: rgb(142, 19, 121);
             overflow: hidden;
         }
     </style>
