--- a/前端布局方案code/水平居中/使用text-align属性.html
+++ b/前端布局方案code/水平居中/使用text-align属性.html
@@ -18,7 +18,7 @@
 
         .child {
             display: inline-block;
-            margin:0;
+            /* margin:0; */
         }
     </style>
 </head>
