--- a/test/beforeunload.html
+++ b/test/beforeunload.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <div style="width:800px;height:200px;text-align: center;border:solid;">
-        dddd
-    </div>
+    <script>
+        window.addEventListener('beforeunload', function (e) {
+            e.preventDefault();
+            e.returnValue = '';
+            localStorage.setItem('key','last msg')
+        });
+    </script>
 </body>
+
 </html>
